--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,8 @@
 <div>
-    <div class="gridStyle" ng-grid="gridOptions"></div>
+    <p><label>Enter Zip Code:</label><input text="text" ng-model="zipCode" ng-enter="search()"><button class="btn-submit" ng-click="search();">Search Places!</button></p>
+    <ng-switch on="flags.stage">
+        <div ng-switch-when="0"></div>
+        <div ng-switch-when="1">Please Wait!!</div>
+        <div ng-switch-when="2" class="gridStyle" ng-grid="gridOptions"></div>
+    </ng-switch>
 </div>
