--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -81,6 +81,6 @@ body {
 
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 400px;
-    height: 300px
+    width: 100%;
+    height: 500px;
 }
