--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -84,3 +84,11 @@ body {
     width: 100%;
     height: 500px;
 }
+
+google-map {
+    display: block;
+    width: 100%;
+    height: 500px;
+}
+
+.angular-google-map-container { height: 400px; }
